@@ -2,6 +2,7 @@
 
 Changelog for HylaFAX
 
+* add support for TIFFTAG_FAXDCS (5 Mar 2005)
 * fix batching error in ECM to some receivers (5 Mar 2005)
 * modify parsing of Class1EnableV34Cmd (5 Mar 2005)
 * add configurable support for tiff2pdf from libtiff (2 Mar 2005)
